2002-08-17  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/selection-chemistry.c (sp_selection_ungroup): Use method from item group

	* src/sp-item-group.c (sp_item_group_ungroup): Preserve order and styles

	* src/style.c (sp_style_read_from_object): Synchronized with new style structure
	(sp_style_merge_property): Ditto
	(sp_style_merge_from_object_parent): Ditto
	(sp_style_merge_ipaint): Renamed
	(sp_style_write_string): New write semantics
	(sp_style_write_difference): New method
	(sp_text_style_write): New write semantics
	(sp_style_read_ifloat): Rename
	(sp_style_read_iscale30): Ditto
	(sp_style_read_ienum): Ditto
	(sp_style_read_istring): Ditto
	(sp_style_read_ipaint): Ditto
	(sp_style_write_ifloat): Signature, semantics and name change
	(sp_style_write_iscale30): Ditto
	(sp_style_write_ienum): Ditto
	(sp_style_write_istring): Ditto
	(sp_style_write_ipaint): Ditto
	(sp_paint_differ): Helper

	* src/style.h: Renamed inherited types, changed miterlimit to ifloat

	* src/color.c (sp_color_is_equal): New method

	* src/style.c (sp_style_merge_from_style_string): Accept (although warn)
	properties without end marker

	* src/dialogs/export.c (sp_export_do_export): Use correct transformation

	* src/main.c: Added command-line export functionality
	(main): Cleanup
	(sp_main_gui): Broke GUI-specific stuff here
	(sp_main_console): Same for console mode, implement export, use current dor for print

2002-08-16  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/toolbox.c (sp_maintoolbox_create): Moved draw toolbox to separate method
	(sp_toolbox_draw_set_object): Callback
	(sp_toolbox_draw_create): New method, create MenuButtons
	(sp_update_draw_toolbox): Use MenuButtons

	* src/event-broker.c: Added pen context, use pencil and pen instead of draw

	* src/draw-context.c: Break draw context into parent, pencil and pen

	* src/draw-context.h: Ditto

	* src/widgets/sp-menu-button.h: New file

	* src/widgets/sp-menu-button.c: New file, implement something similar to